Fixed font that was not showing for some elements and replaced .gif file

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ h1 {
   margin-right: -1px;
   border: 1px solid #313131;
   border-radius: 3px;
+  font-family: "Lucida Console", monospace;
 }
 
 /* Remove right margin from the last filter button */
@@ -58,6 +59,7 @@ button {
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  font-family: "Lucida Console", monospace;
 }
 
 /* Add hover effect to the general buttons */
@@ -82,6 +84,7 @@ button:hover {
   border-radius: 4px;
   font-size: 14px;
   background-color: #f1f1f1;
+  font-family: "Lucida Console", monospace;
 }
 
 /* Style the submit button in the task form */
@@ -94,6 +97,7 @@ button:hover {
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  font-family: "Lucida Console", monospace;
 }
 
 /* Add hover effect to the submit button in the task form */
